--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation'com.android.volley:volley:1.1.1'
+    implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.android.support:design:27.1.1'
+
+    implementation 'com.karumi:dexter:5.0.0'
+    // glide image library
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    implementation 'com.google.code.gson:gson:2.6.2'
+
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
