--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    signingConfigs {
-        debug {
-            storeFile file('F:\\dijikey.jks')
-            keyAlias = 'key0'
-            keyPassword '1234567890'
-            storePassword '1234567890'
-        }
-    }
+//    signingConfigs {
+//        debug {
+//            storeFile file('F:\\dijikey.jks')
+//            keyAlias = 'key0'
+//            keyPassword '1234567890'
+//            storePassword '1234567890'
+//        }
+//    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "superior.com.superior"
@@ -57,6 +57,7 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp-urlconnection:3.0.1"
     implementation "com.squareup.okhttp3:logging-interceptor:3.4.1"
 
+
     // glide image library
     //implementation "com.github.bumptech.glide:glide:4.3.1"
 
@@ -65,4 +66,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+
+    implementation 'com.jaredrummler:material-spinner:1.2.5'
 }
