--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/NoActionBar">
-
-        <activity android:name=".FilterFarmerActivity">
+        <activity android:name=".SpinnerTest">
 
         </activity>
-        <activity android:name=".Login" >
+        <activity android:name=".FilterFarmerActivity"></activity>
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,6 +35,7 @@
             android:name=".UpdateDB"
             android:enabled="true"
             android:exported="true" />
+
         <receiver
             android:name=".backupReceiver"
             android:enabled="true"
@@ -46,7 +47,7 @@
         </receiver>
 
         <activity android:name=".Print" />
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
 
         </activity>
     </application>
