--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/NoActionBar">
-        <activity android:name=".SpinnerTest">
-
-        </activity>
-        <activity android:name=".FilterFarmerActivity"></activity>
+        <activity android:name=".FilterRoute"></activity>
+        <activity android:name=".SpinnerTest"></activity>
+        <activity android:name=".FilterFarmerActivity" />
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,7 +46,8 @@
         </receiver>
 
         <activity android:name=".Print" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/Theme.AppCompat">
 
         </activity>
